# police-database

./: .gitignore  README.md  download.sh  findings.md  main.py  pyproject.toml  report.html  run_all.sh
src/: 00_profile_clean.py  01_fetch_census.py  02_fetch_fbi.py  02b_fetch_arrests.py  02c_fetch_homicide.py  02d_fetch_injury.py  03_fetch_context.py  04_build_panel.py  05_model_rates.py  05b_rural_analysis.py  06_model_incident.py  07_report.py  08_report_html.py  common.py
